--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -3017,6 +3017,11 @@ Shor's algorithm is a quantum algorithm for finding the prime factors of an inte
 \end{frame}
 
 
+\begin{frame}\frametitle{Quantum Key Distribution and BB84}
+Quantum Key Distribution (QKD) is a technique that enables secure communication between two parties by sharing a secret key. One of the most well-known QKD protocols is the BB84 protocol, proposed by Charles Bennett and Gilles Brassard in 1984. In this protocol, Alice and Bob use a quantum channel to exchange qubits, allowing them to generate a shared key that is resistant to eavesdropping. 
+\end{frame}
+
+
 
 
 \begin{frame}\frametitle{BB84 - Alice and Bob}
@@ -3050,7 +3055,7 @@ The no-cloning theorem states that it is impossible to create an independent and
 
 
 
-\begin{frame}\frametitle{Assignmet: Quantum Key Distribution}
+\begin{frame}\frametitle{Assignment: Quantum Key Distribution}
 \begin{columns}
 \begin{column}{5cm}
 \begin{center}
@@ -3350,6 +3355,48 @@ Grangier-Roger-Aspect experiment
 \end{column}
 \end{columns}
 \end{frame}
+
+\begin{frame}\frametitle{Assignment: Quantum Optics - Part 1}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/QOCover.jpg}
+\end{center}
+\end{column}
+\begin{column}{6.5cm}
+\begin{itemize}
+\item Assemble Components per Chapter 7.1
+\item Conduct Preliminary Alignment per Chapter 7.2
+\item Setup ALignment Laser HBT Experiment per Chapter 7.3
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Quantum Optics - Part 2}
+\begin{columns}
+\begin{column}{5.0cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/QO_coinc.jpg}
+\includegraphics[width=4cm]{fig/QO_a2t.jpg}
+\includegraphics[width=4cm]{fig/QO_g2.jpg}
+\end{center}
+\end{column}
+\begin{column}{6.5cm}
+Setup Photon Pair Source (Chapter 7.4)
+\begin{center}
+\includegraphics[width=5cm]{fig/QO_PP.jpg}
+\end{center}
+\begin{itemize}
+\item When asked to set laser to 13 mW, use Power Meter to determine necessary current.
+\item Determine Delay A to T on calibration tab
+\item $g2(0)$ should be greater than 75
+\end{itemize}
+
+\end{column}
+\end{columns}
+\end{frame}
+
 
 \section{Schrodenger's Atom}
 
