quantum optics update

--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -3324,10 +3324,53 @@ Neils Bohr, Dutch physicist, derived the spectrum from the planetary model and:
 \end{center}
 \end{frame}
 
-\begin{frame}\frametitle{Spontaneous Parametric Down Conversion}
+
+
+\begin{frame}\frametitle{Assignment: Quantum Optics - Part 1}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/QOCover.jpg}
+\end{center}
+\end{column}
+\begin{column}{6.5cm}
+\begin{itemize}
+\item Assemble Components per Chapter 7.1
+\item Conduct Preliminary Alignment per Chapter 7.2
+\item Setup Alignment Laser HBT Experiment per Chapter 7.3
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{BBO Crystal: Spontaneous Parametric Down Conversion}
 \begin{center}
 \includegraphics[width=8cm]{fig/SPDC2.jpg}
 \end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Quantum Optics - Part 2}
+\begin{columns}
+\begin{column}{5.0cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/QO_coinc.jpg}
+\includegraphics[width=4cm]{fig/QO_a2t.jpg}
+\includegraphics[width=4cm]{fig/QO_g2.jpg}
+\end{center}
+\end{column}
+\begin{column}{6.5cm}
+Setup Photon Pair Source (Chapter 7.4)
+\begin{center}
+\includegraphics[width=5cm]{fig/QO_PP.jpg}
+\end{center}
+\begin{itemize}
+\item When asked to set laser to 13 mW, use Power Meter to determine necessary current.
+\item Determine Delay A to T on calibration tab
+\item $g2(0)$ should be greater than 75
+\end{itemize}
+
+\end{column}
+\end{columns}
 \end{frame}
 
 
@@ -3356,41 +3399,27 @@ Grangier-Roger-Aspect experiment
 \end{columns}
 \end{frame}
 
-\begin{frame}\frametitle{Assignment: Quantum Optics - Part 1}
-\begin{columns}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=5cm]{fig/QOCover.jpg}
-\end{center}
-\end{column}
-\begin{column}{6.5cm}
-\begin{itemize}
-\item Assemble Components per Chapter 7.1
-\item Conduct Preliminary Alignment per Chapter 7.2
-\item Setup ALignment Laser HBT Experiment per Chapter 7.3
-\end{itemize}
-\end{column}
-\end{columns}
-\end{frame}
 
-\begin{frame}\frametitle{Assignment: Quantum Optics - Part 2}
+\begin{frame}\frametitle{Assignment: Quantum Optics - Part 3}
 \begin{columns}
 \begin{column}{5.0cm}
 \begin{center}
-\includegraphics[width=4cm]{fig/QO_coinc.jpg}
-\includegraphics[width=4cm]{fig/QO_a2t.jpg}
-\includegraphics[width=4cm]{fig/QO_g2.jpg}
+\begin{center}
+\includegraphics[width=5cm]{fig/QO_GRA2.jpg}
+\end{center}
 \end{center}
 \end{column}
 \begin{column}{6.5cm}
-Setup Photon Pair Source (Chapter 7.4)
+Grangier-Roger-Aspect (Chapter 7.5)
 \begin{center}
-\includegraphics[width=5cm]{fig/QO_PP.jpg}
+\includegraphics[width=5cm]{fig/QO_GRA.jpg}
 \end{center}
 \begin{itemize}
-\item When asked to set laser to 13 mW, use Power Meter to determine necessary current.
-\item Determine Delay A to T on calibration tab
-\item $g2(0)$ should be greater than 75
+\item Position Beamsplitter
+\item Position Third Detector
+\item Align Third Detector
+\item $g^2(0)$ should be less than 0.1
+\item Investigate single photon Malus law (Chapter 9.6)
 \end{itemize}
 
 \end{column}
