--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -2930,6 +2930,16 @@ Decrypt: Reverse process
 \end{columns}
 \end{frame}
 
+\begin{frame}\frametitle{Enigma Machine}
+\begin{center}
+\includegraphics[width=6cm]{fig/enigma.jpg}
+
+\vspace{0.25cm}
+
+\url{https://www.youtube.com/watch?v=ybkkiGtJmkM}
+\end{center}
+\end{frame}
+
 
 \begin{frame}\frametitle{Symmetric Key Encryption}
 \begin{center}
