--- a/bootcamp/quantum_electronics.tex
+++ b/bootcamp/quantum_electronics.tex
@@ -463,6 +463,40 @@ $ f_{c} = \frac{1}{2 \pi RC} = \frac{1}{2 \pi (500) (4.7 x 10^{-6})} = 67.5678 H
 \end{figure}
 \end{frame}
 
+\begin{frame}\frametitle{Maxwell's Equations}
+
+\begin{itemize}
+\item Gauss's Law
+\[ \nabla \cdot E = \frac{\rho}{\epsilon_0}\]
+\item Gauss's Law for Magnetism
+\[ \nabla \cdot B = 0\]
+\item Faraday's Law
+\[ \nabla \times E = -\frac{\delta B}{\delta t} \]
+\item Ampere-Maxwell Law
+\[ \nabla \times B = \mu_0 J + \mu_0 \epsilon_0 \frac{\delta E}{\delta t} \]
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}\frametitle{Maxwell's Equations - What They Mean}
+
+\begin{itemize}
+\item Gauss's Law: Electric charges are "sources" or "sinks" for electric fields
+\item Gauss's Law for Magnetism: There are no magnetic monopoles
+\item Faraday's Law: A changing magnetic field induces current
+\item Ampere-Maxwell Law: Moving charges and changing electric fields both create circulating magnetic fields. 
+\end{itemize}
+
+\vspace{1cm}
+
+Permittivity and Permeability:
+\begin{itemize}
+\item Permittivity of free space: $\epsilon_0 = 8.85 \times 10^{-12}$ (F/m)
+\item Permeability of free space: $\mu_{0} = 4 \pi \times 10^{-7}$ (H/m)
+\end{itemize}
+
+\end{frame}
+
 
 \begin{frame}\frametitle{Inductors}
 \begin{columns}
@@ -567,6 +601,19 @@ Double Pole, Double Throw Relay
 \includegraphics[scale=1.8]{fig/hse.png}
 \end{center}
 \end{frame}
+
+\begin{frame}\frametitle{Arc Flash}
+\begin{center}
+\includegraphics[width=8cm]{fig/arcflash1.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Arc Flash}
+\begin{center}
+\includegraphics[width=12cm]{fig/arcflash2.jpg}
+\end{center}
+\end{frame}
+
 
 \begin{frame}\frametitle{Three Point Check}
 \begin{columns}
