--- a/bootcamp/quantum_electronics.tex
+++ b/bootcamp/quantum_electronics.tex
@@ -633,6 +633,82 @@ Double Pole, Double Throw Relay
 \end{columns}
 \end{frame}
 
+\section{Transformers and Rectifiers}
+
+\begin{frame}\frametitle{Magnetic Flux}
+
+\begin{center}	
+	\includegraphics[width=4cm]{fig/fluxCap.jpg}
+\end{center}
+
+\vspace{.25cm}
+
+Magnetic Flux ($\Phi$) is the amount of magnetic field lines per unit area.
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Transformer}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{center}	
+	\includegraphics[width=5.2cm]{fig/Bflux2.jpg}
+\end{center}
+\end{column}
+\begin{column}{5.5cm}
+From Faraday's Law:
+
+\[ V = -N \frac{\Delta \Phi}{\Delta t} \]
+
+Because the change in flux is the same on both sides of the transformer:
+
+\[\frac{V_s}{V_p} = \frac{N_s}{N_p} \]
+
+
+The voltage change is a result of the different number of windings
+
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Full Wave Rectifier}
+
+\begin{center}	
+	\includegraphics[width=8cm]{fig/rectifier1.jpg}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Full Wave Rectifier in Action}
+\begin{columns}
+\begin{column}{5.5cm}
+Positive Half Cycle
+\begin{center}	
+	\includegraphics[width=5.2cm]{fig/rectifier2.jpg}
+\end{center}
+\end{column}
+\begin{column}{5.5cm}
+Negative Half Cycle
+\begin{center}	
+	\includegraphics[width=5.2cm]{fig/rectifier2.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Full Wave Rectifier with Smoothing Capacitor}
+\begin{center}	
+	\includegraphics[width=8cm]{fig/rectifier4.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Putting it All Together}
+\begin{center}	
+	\includegraphics[width=12cm]{fig/rectifier6.jpg}
+\end{center}
+\end{frame}
 
 \section{Diodes and Photodetectors}
 
