--- a/bootcamp/quantum_electronics.tex
+++ b/bootcamp/quantum_electronics.tex
@@ -576,6 +576,35 @@ Double Pole, Double Throw Relay
 \end{columns}
 \end{frame}
 
+\begin{frame}\frametitle{Contactor}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{center}
+\includegraphics[width=3.5cm]{fig/contactor.jpg}
+
+\vspace{0.25cm}
+
+\includegraphics[width=5.5cm]{fig/contactor2.jpg}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+Difference between contactor and other relays
+\begin{itemize}
+\item Higher current, voltage, and power ratings
+\item Often join 2 poles without a common circuit between them
+\item Built in arc suppression, allowing them to handle high currents, such as motor starting inrush currents
+
+\begin{itemize}
+\item Gas filled Contactors
+\item Magnetic Blowout Contactors
+\end{itemize}
+\end{itemize}
+
+
+\end{column}
+\end{columns}
+\end{frame}
+
 
 
 \begin{frame}\frametitle{Electrical Safety - Three Wires}
