--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -3086,6 +3086,36 @@ The no-cloning theorem states that it is impossible to create an independent and
 
 \section{The Atom and Quantum Mechanics}
 
+\begin{frame}\frametitle{Electromagnetic Spectrum}
+\begin{center}
+\includegraphics[width=10cm]{fig/emspec.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Visible Spectrum}
+\begin{center}
+\includegraphics[width=10cm]{fig/visspectrum.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Eye Sensitivity}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/visspectrum2.jpg}
+\end{center}
+\end{column}
+\begin{column}{6.5cm}
+\begin{center}
+\includegraphics[width=6cm]{fig/eyenu.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+
 \begin{frame}\frametitle{The Electron}
 The English physicist, J.J. Thompson experimented with Cathode-Ray Tubes passing the "ray" through both electric and magnetic fields.
 \begin{columns}
@@ -3250,6 +3280,73 @@ A quantum of light is called a photon.
 \end{columns}
 \end{frame}
 
+
+
+\begin{frame}\frametitle{Hydrogen Spectra - Balmer Series}
+\begin{center}
+\includegraphics[width=8cm]{fig/balmerspec.jpg}
+\end{center}
+
+\vspace{1cm}
+
+The spectrum of hydrogen was known in the mid 1880. Johann Balmer, in 1885, was able to empirically calculate an equation that predicted the wavelength of the spectral lines. These lines became known as the Balmer Series. 
+
+\[ \lambda = B \frac{m^2}{m^2-2^2} \]
+
+where $B = 364.50682$ nm.
+
+\end{frame}
+
+\begin{frame}\frametitle{Hydrogen Spectral Series - Rydberg Formula}
+\begin{center}
+\includegraphics[width=10cm]{fig/hydspec.jpg}
+\end{center}
+
+In 1888, Johannes Rydberg generalized the Balmer equation to
+
+\[ \frac{1}{\lambda} =  R_H (\frac{1}{n'^2} - \frac{1}{n^2} )\]
+
+for $n > n'$ and $R_H = 1.097 \times 10^7 (m^{-1})$.
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Hydrogen Spectral Series - Rydberg Formula}
+\begin{center}
+\includegraphics[width=7cm]{fig/hydspec.jpg}
+\end{center}
+
+\begin{itemize}
+\item n=1 Lyman Series
+\item n=2 Balmer Series
+\item n=3 Paschen Series
+\item n=4 Brackett Series
+\item n=5 Pfund Series
+\item n=6 Humphreys Series
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}\frametitle{Bohr's Atom}
+\begin{columns}
+\begin{column}{7cm}
+Neils Bohr, Dutch physicist, derived the spectrum from the planetary model and:
+\begin{itemize}
+\item Only certain orbits area allowed (orbits of electrons in atoms are quantized)
+\item Each orbit has different energy: absorb to move to a higher orbit, drop to lower orbit by emitting.
+\item Energy absorbed/emitted is also quantized, producing discrete spectra.
+\item Energy to move from one orbit to another
+\[ \Delta E = hf = E_i - E_f\]
+\end{itemize}
+\end{column}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/bohr.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
 \begin{frame}\frametitle{Bohr's Atom}
 \begin{center}
 \includegraphics[width=7cm]{fig/hydrogenspectrum.png}
@@ -3267,28 +3364,115 @@ where the Rydberg constant (R): $R = 1.097 \times 10^7 (m^{-1})$.
 \end{itemize}
 \end{frame}
 
+
 \begin{frame}\frametitle{Bohr's Atom}
 \begin{center}
 \includegraphics[width=8cm]{fig/lyman.png}
 \end{center}
 \end{frame}
 
+\begin{frame}\frametitle{Schrodenger's Atom}
+\begin{center}
+\includegraphics[width=12cm]{fig/qmatom.jpg}
+\end{center}
+\end{frame}
 
-\begin{frame}\frametitle{Bohr's Atom}
+\begin{frame}\frametitle{Conservation Laws of Physics}
+\begin{center}
+\includegraphics[width=12cm]{fig/conserve.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Compton Effect}
+\begin{center}
+\includegraphics[width=6cm]{fig/compton.png}
+\end{center}
+
+Light has momentum:
+
+\[p = \frac{h}{\lambda} \]
+
+\end{frame}
+
+\begin{frame}\frametitle{de Broglie}
+\begin{center}
+\includegraphics[width=7cm]{fig/matterwave.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Waves and Quantization}
 \begin{columns}
-\begin{column}{7cm}
-Neils Bohr, Dutch physicist, derived the spectrum from the planetary model and:
+\begin{column}{6.5cm}
 \begin{itemize}
-\item Only certain orbits area allowed (orbits of electrons in atoms are quantized)
-\item Each orbit has different energy: absorb to move to a higher orbit, drop to lower orbit by emitting.
-\item Energy absorbed/emitted is also quantized, producing discrete spectra.
-\item Energy to move from one orbit to another
-\[ \Delta E = hf = E_i - E_f\]
+\item Per de Broglie proposed matter has wave-like properties ($\lambda = \frac{h}{p}$)
+\item Electrons can only exist in locations where they interfere constructively.
+\item Not all orbits produce constructive interference, so not all allowed
+\[ n \lambda_n = 2 \pi r_n \text{, for n = 1, 2, 3, ...} \]
+\[ \frac{nh}{m_e v} = 2 \pi r_n \]
+Angular Momentum (L):
+\[ L = m_e v r_n = n \frac{h}{2 \pi}  \text{, for n = 1, 2, 3, ...} \]
 \end{itemize}
 \end{column}
-\begin{column}{4.5cm}
+\begin{column}{5cm}
 \begin{center}
-\includegraphics[width=4cm]{fig/bohr.jpg}
+\includegraphics[width=5cm]{fig/bohr1.jpg}
+
+\vspace{1cm}
+
+\includegraphics[width=5cm]{fig/bohr2.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+
+
+\begin{frame}\frametitle{Probability Cloud}
+\begin{columns}
+\begin{column}{6.5cm}
+Due to the wave nature of matter, the idea of well-defined orbits gives way to a model in which there is a cloud of probability, consistent with the Heisenberg uncertainty principle. 
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/schrodenger1.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Pauli Exclusion Principle}
+
+Each electron has a unique quantum number:
+
+\begin{center}
+\includegraphics[width=7cm]{fig/periodictable.png}
+
+\vspace{0.25cm}
+
+\includegraphics[width=5cm]{fig/qnumber.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Orbitals}
+\begin{center}
+\includegraphics[width=12cm]{fig/orbitals.png}
+\end{center}
+\end{frame}
+
+
+
+
+\begin{frame}\frametitle{Patterns in Spectra - Zeeman Effect}
+\begin{columns}
+\begin{column}{6.5cm}
+Dutch physics student Pieter Zeeman investigated how spectra are affected by magnetic fields. In the presence of an external\footnote{Very percise measurements have shown that spectrail lines are doublets (split in two) apparently by the magnetic fields within the atom itself.} magnetic fields, the spectral lines split into two or more separate lines.
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/zeeman1.jpg}
 \end{center}
 \end{column}
 \end{columns}
@@ -3437,58 +3621,7 @@ Grangier-Roger-Aspect (Chapter 7.5)
 \end{frame}
 
 
-\section{Schrodenger's Atom}
 
-\begin{frame}\frametitle{Waves and Quantization}
-\begin{columns}
-\begin{column}{6.5cm}
-\begin{itemize}
-\item Per de Broglie proposed matter has wave-like properties ($\lambda = \frac{h}{p}$)
-\item Electrons can only exist in locations where they interfere constructively.
-\item Not all orbits produce constructive interference, so not all allowed
-\[ n \lambda_n = 2 \pi r_n \text{, for n = 1, 2, 3, ...} \]
-\[ \frac{nh}{m_e v} = 2 \pi r_n \]
-Angular Momentum (L):
-\[ L = m_e v r_n = n \frac{h}{2 \pi}  \text{, for n = 1, 2, 3, ...} \]
-\end{itemize}
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=5cm]{fig/bohr1.jpg}
-
-\vspace{1cm}
-
-\includegraphics[width=5cm]{fig/bohr2.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Probability Cloud}
-\begin{columns}
-\begin{column}{6.5cm}
-Due to the wave nature of matter, the idea of well-defined orbits gives way to a model in which there is a cloud of probability, consistent with the Heisenberg uncertainty principle. 
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=5cm]{fig/schrodenger1.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}\frametitle{Patterns in Spectra - Zeeman Effect}
-\begin{columns}
-\begin{column}{6.5cm}
-Dutch physics student Pieter Zeeman investigated how spectra are affected by magnetic fields. In the presence of an external\footnote{Very percise measurements have shown that spectrail lines are doublets (split in two) apparently by the magnetic fields within the atom itself.} magnetic fields, the spectral lines split into two or more separate lines.
-\end{column}
-\begin{column}{5cm}
-\begin{center}
-\includegraphics[width=5cm]{fig/zeeman1.jpg}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
 
 
 \section{What is a Qubit}
