--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -3605,7 +3605,7 @@ Only wavelengths that can form a standing wave mode within the cavity are allowe
 Only the wavelengths within the gain medium spectrum (where there is sufficient gain) will be present in the output. 
 \end{frame}
 
-\section{Quantum Optics}
+\section{Quantum Optics - Making Single Photon Pairs}
 
 \begin{frame}\frametitle{BBO Crystals}
 \begin{center}
