--- a/bootcamp/quantum_math.tex
+++ b/bootcamp/quantum_math.tex
@@ -1615,6 +1615,44 @@ I = \frac{V_{cc}}{R_1} + \frac{V_{cc}}{R_2}
 \end{center}
 \end{frame}
 
+\section{Control Theory}
+
+\begin{frame}\frametitle{PID Control: Cruise Control Example}
+\begin{center}
+\includegraphics[width=6cm]{fig/cruiseLogo.jpg}
+\end{center}
+\url{https://youtu.be/XfAt6hNV8XM?si=DFWqnSe2hT0wGM92}
+\end{frame}
+
+\begin{frame}\frametitle{PID Control: The Plant (the car)}
+\begin{center}
+\includegraphics[width=12cm]{fig/cruise.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{PID Control: Proportional Control}
+\begin{center}
+\includegraphics[width=12cm]{fig/cruise2.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{PID Control: Proportional Control}
+\begin{center}
+\includegraphics[width=12cm]{fig/cruise3.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{PID Control: Adding in D}
+\begin{center}
+\includegraphics[width=12cm]{fig/cruise4.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{PID Control: Adding in I}
+\begin{center}
+\includegraphics[width=12cm]{fig/cruise5.jpg}
+\end{center}
+\end{frame}
 
 
 \end{document}
