--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -3825,7 +3825,33 @@ Grangier-Roger-Aspect (Chapter 7.5)
 \end{columns}
 \end{frame}
 
+\section{Magneto-Optical Trap}
 
+\begin{frame}\frametitle{01.0 - Mini UHV Gate Valve}
+\begin{columns}
+\begin{column}{5.0cm}
+\begin{center}
+\begin{center}
+\includegraphics[width=5cm]{fig/vatValve.jpg}
+\end{center}
+\end{center}
+\end{column}
+\begin{column}{6.5cm}
+\begin{itemize}
+\item Vacuum range $7.5 \cdot 10^{-11}$ Torr to $1500$ Torr
+\item Free of lubricants
+\item No valve mechanism in vacuum
+\item Bake out temperature up to $250^{\circ}C$
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame} \frametitle{Viton™ Fluoroelastomers Sealing Surface}
+\begin{center}
+\includegraphics[width=9cm]{fig/vatValve2.jpg}
+\end{center}
+\end{frame}
 
 \section{What is a Qubit}
 
