--- a/bootcamp/quantum_electronics.tex
+++ b/bootcamp/quantum_electronics.tex
@@ -783,7 +783,7 @@ LEDs (that's "ell-ee-dees") are a particular type of diode that convert electric
 \end{columns}
 \end{frame}
 
-\begin{frame}\frametitle{Avalanche Photo Diode}
+\begin{frame}\frametitle{Avalanche Photodiode (APD)}
 \begin{columns}
 \begin{column}{5cm}
 \begin{center}	
@@ -800,5 +800,58 @@ LEDs (that's "ell-ee-dees") are a particular type of diode that convert electric
 \end{column}
 \end{columns}
 \end{frame}
+
+\section{Operational Amplifiers}
+
+\begin{frame}\frametitle{Ideal Op Amp}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}	
+	\includegraphics[width=4cm]{fig/opAmpIdeal.jpg}
+	
+\vspace{0.25cm}	
+	
+	\includegraphics[width=4cm]{fig/opAmpIdeal2.png}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item Op Amp amplifies the difference in voltage between the two inputs
+\item Ideal OpAmp Assumptions
+\begin{itemize}
+\item Amplification is infinite ($> 20k$) 
+\[ v_{n} = v_{p} \] 
+\item Input impedance is infinite
+\[i_{n} = i_{p} = 0\]
+\item Output impedance is zero
+\end{itemize}
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{OpAmp in saturation}
+
+\begin{center}	
+	\includegraphics[width=7cm]{fig/opAmpSat.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Op Amp Circuits}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{center}	
+	\includegraphics[width=5.2cm]{fig/opamp1.jpg}
+\end{center}
+\end{column}
+\begin{column}{5.5cm}
+\begin{center}	
+	\includegraphics[width=5.2cm]{fig/opamp2.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
 
 \end{document}
