--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -3853,6 +3853,24 @@ Grangier-Roger-Aspect (Chapter 7.5)
 \end{center}
 \end{frame}
 
+\begin{frame}\frametitle{01.0 - Mini UHV Gate Valve}
+\begin{columns}
+\begin{column}{7.0cm}
+\begin{center}
+\begin{center}
+\includegraphics[height=7cm]{fig/vatValve3.jpg}
+\end{center}
+\end{center}
+\end{column}
+\begin{column}{4.0cm}
+\begin{center}
+\includegraphics[height=7cm]{fig/vatValve4.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
 \section{What is a Qubit}
 
 \begin{frame} \frametitle{Bit vs Qubit}
