--- a/bootcamp/quantum_electronics.tex
+++ b/bootcamp/quantum_electronics.tex
@@ -853,5 +853,98 @@ LEDs (that's "ell-ee-dees") are a particular type of diode that convert electric
 \end{columns}
 \end{frame}
 
+\begin{frame}\frametitle{Capacitors Revisited}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{center}	
+	\includegraphics[width=3cm]{fig/abp0.png}
+\end{center}
+\end{column}
+\begin{column}{5.5cm}
+Capacitor acts like:
+\begin{itemize}
+\item High Frequency: Short
+\item Low Frequency: Open
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Passive Filters}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{center}	
+	\includegraphics[width=5.5cm]{fig/pbp1.jpg}
+\end{center}
+\end{column}
+\begin{column}{5.5cm}
+\begin{center}	
+	\includegraphics[width=5.5cm]{fig/pbp2.jpg}
+\end{center}
+\end{column}
+\end{columns}
+
+\vspace{1cm}
+
+\begin{center}
+	\includegraphics[width=7cm]{fig/abp3.jpg}
+\end{center}
+
+\end{frame}
+
+
+
+
+\begin{frame}\frametitle{Active Bandpass Filter}
+
+\begin{center}	
+	\includegraphics[width=8cm]{fig/abp1.jpg}
+	
+	\vspace{1cm}
+	
+	\includegraphics[width=8cm]{fig/abp3.jpg}
+		
+	
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Active Bandpass Response}
+\begin{center}	
+	\includegraphics[width=8cm]{fig/abp4.jpg}	
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Inverting Active Bandpass Filter}
+\begin{center}	
+	\includegraphics[width=10cm]{fig/abp2.jpg}	
+\end{center}
+
+\[f_L = \frac{1}{2 \pi R_1 C_1} \hspace{2cm} f_H = \frac{1}{2 \pi R_2 C_2} \]
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Higher Order Butterworth (Lowpass) Filters}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}	
+	\includegraphics[width=4cm]{fig/butter2.jpg}
+\end{center}
+\end{column}
+\begin{column}{6.5cm}
+\begin{center}	
+	\includegraphics[width=6cm]{fig/butter1.jpg}
+\end{center}
+\end{column}
+\end{columns}
+
+\vspace{1cm}
+
+First described in 1930 by the British engineer and physicist Stephen Butterworth in his paper entitled "On the Theory of Filter Amplifiers".
+
+\end{frame}
+
 
 \end{document}
