--- a/bootcamp/quantum_electronics.tex
+++ b/bootcamp/quantum_electronics.tex
@@ -925,6 +925,21 @@ Capacitor acts like:
 
 \end{frame}
 
+\begin{frame}\frametitle{Non-inverting Bandpass filter}
+\begin{columns}
+\begin{column}{4.5cm}
+\begin{center}	
+	\includegraphics[width=4.5cm]{fig/noninvamp_bb.jpg}
+\end{center}
+\end{column}
+\begin{column}{6.5cm}
+\begin{center}	
+	\includegraphics[width=6.5cm]{fig/noninvamp_schem.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
 
 \begin{frame}\frametitle{Higher Order Butterworth (Lowpass) Filters}
 \begin{columns}
