--- a/bootcamp/quantum_safety.tex
+++ b/bootcamp/quantum_safety.tex
@@ -61,7 +61,7 @@
 \addtobeamertemplate{frametitle}{}{%
 \begin{textblock*}{50mm}(0cm,-1.25cm)
 \color{yellow!85!orange}
-\tiny{Copyright \copyright 2024 CNM.}
+\tiny{Copyright \copyright 2026 CNM}
 \end{textblock*}}
 
 % position the logo
@@ -155,6 +155,7 @@
 \includegraphics[width=6cm]{fig/highV.jpg}
 \end{center}
 \end{frame}
+
 
 
 
